--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "vue3-dropzone": "^2.1.2",
         "vue3-leaflet": "^1.0.48",
         "vue3-observe-visibility": "^0.1.2",
+        "vue3-qrcode-reader": "^0.0.1",
         "vuex": "^4.1.0",
         "vuex-persist": "^3.1.3",
         "vuex-persistedstate": "^4.1.0"
